Update EventService.java